# slim

./: .gitignore  Cargo.toml  build.rs  readme.md
src/: main.rs
ui/: app_window.slint  buttons.slint  frame_less_window.slint  window_title_bar.slint
ui/assets/: app.rc
