[package]
name = "slim"
version = "0.1.0"
edition = "2024"

[build-dependencies]
slint-build = "1.11.0"
embed-resource = "3.0.3"

[dependencies]
anyhow = "1.0.98"
native-dialog = "0.9.0"
slint = "1.11.0"
i-slint-backend-winit = "1.11.0"
tokio = { version = "1.45.1", features = ["full"] }
rand = "0.9.1"
